<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RestActivity">

    <ImageView
        android:id="@+id/cakeDayId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:src="@drawable/cakeday"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/todaysMenuTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:adjustViewBounds="true"
        android:maxHeight="225dp"
        android:maxWidth="225dp"
        android:src="@drawable/todaysmenu" />

    <ImageView
        android:id="@+id/forkAndKnifeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:maxWidth="80dp"
        android:src="@drawable/forkandknife" />

    <ImageView
        android:id="@+id/bottomWaveId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/bottomwave" />

    <ImageView
        android:id="@+id/thumbsUpId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="145dp"
        android:layout_marginStart="145dp"
        android:adjustViewBounds="true"
        android:maxHeight="28dp"
        android:maxWidth="28dp"
        android:onClick="onClick"
        android:src="@drawable/thumbsup" />

    <ImageView
        android:id="@+id/thumbsDownId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:adjustViewBounds="true"
        android:maxHeight="28dp"
        android:maxWidth="28dp"
        android:onClick="onClick"
        android:src="@drawable/thumbsdown" />

    <TextView
        android:id="@+id/likesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:text="@string/likes_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dislikesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/dislikes_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/mainCourseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/todaysMenuTextId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:maxHeight="105dp"
        android:maxWidth="325dp"
        android:minHeight="105dp"
        android:minWidth="325dp"
        android:text="@string/loading_main_course_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sidesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forkAndKnifeId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:maxWidth="325dp"
        android:text="@string/loading_sides_text"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/visitFacebookText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forkAndKnifeId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:maxWidth="325dp"
        android:text="@string/menu_not_ready_facebook_link_text"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:maxWidth="325dp"
        android:text="@string/date_text"
        android:textSize="12sp" />

</RelativeLayout>